testdata/baselines/reference/contentMappers/contentMapperDisabledAfterRepeatedFailures.txt
=== Content-mapped files ===

//// [A.vue] (ScriptKind: ScriptKindTS, ContentMapper: [.vue])
--- Original ---
<template>original</template>
--- Transformed ---


//// [B.vue] (ScriptKind: ScriptKindTS, ContentMapper: [.vue])
--- Original ---
<template>original</template>
--- Transformed ---


//// [C.vue] (ScriptKind: ScriptKindTS, ContentMapper: [.vue])
--- Original ---
<template>original</template>
--- Transformed ---


//// [D.vue] (ScriptKind: ScriptKindTS, ContentMapper: [.vue])
--- Original ---
<template>original</template>
--- Transformed ---


//// [E.vue] (ScriptKind: ScriptKindTS, ContentMapper: [.vue])
--- Original ---
<template>original</template>
--- Transformed ---


//// [F.vue] (ScriptKind: ScriptKindTS, ContentMapper: [.vue])
--- Original ---
<template>original</template>
--- Transformed ---


//// [G.vue] (ScriptKind: ScriptKindTS, ContentMapper: [.vue])
--- Original ---
<template>original</template>
--- Transformed ---


=== Diagnostics ===

error TS100026: The content mapper 'vue-mapper' failed 5 times and will not be used.
C.vue:1:1 - error TS100025: The content mapper 'vue-mapper' failed to transform this file: mapper protocol version mismatch

1 
  ~

D.vue:1:1 - error TS100025: The content mapper 'vue-mapper' failed to transform this file: mapper protocol version mismatch

1 
  ~

E.vue:1:1 - error TS100025: The content mapper 'vue-mapper' failed to transform this file: mapper protocol version mismatch

1 
  ~

F.vue:1:1 - error TS100025: The content mapper 'vue-mapper' failed to transform this file: mapper protocol version mismatch

1 
  ~

G.vue:1:1 - error TS100025: The content mapper 'vue-mapper' failed to transform this file: mapper protocol version mismatch

1 
  ~

